# cpp_graduate_hwmx

./: .gitignore  CMakeLists.txt  README.MD
benchmark/: CMakeLists.txt  base_vs_lazy.cpp  matrix_chain.cpp
electrical_circuit_lib/: CMakeLists.txt  electrical_circuit.cpp  electrical_circuit.h
end_to_end_tests/: intensity_test.py
graph_lib/: CMakeLists.txt  graph.cpp  graph.h
hwmx_lib/: CMakeLists.txt  algorithm.h  elements_buffer.h  hwmx.cpp  hwmx.h  iterators.h  matrix.h  matrix_chain.h  matrix_line.h  vector.h
resources/: big_test.in
resources/det/: test_generator.py
resources/intensity/: gen.py  test1.in  test1.out  test10.in  test10.out  test11.in  test11.out  test2.in  test2.out  test3.in  test3.out  test4.out  test5.in  test5.out  test6.in  test6.out  test7.in  test7.out  test8.in  test8.out  test9.in  test9.out  test_error1.in  test_error1.out  test_error2.in  test_error2.out  test_error3.in  test_error3.out
resources/matrix_chain/: test.in  test.out  test_generator.py
src/: CMakeLists.txt  det.cpp  elements_buffer.h  hwmx.cpp  intensity.cpp  iterators.h  matrix.h  matrix_chain.h  matrix_line.h  matrix_traits.h  optimal_order.cpp  vector.h
test/: CMakeLists.txt  det_test.cpp  exception_safety_test.cpp  intensity_test.cpp  lazy_behavior_test.cpp  matrix_chain_test.cpp
